--- a/토스/index.html
+++ b/토스/index.html
@@ -162,7 +162,7 @@
         <div class="section5-inner">
           <div class="main-title">
             <h1>대출</h1>
-            <h2>여러 은행의 조건을<br><span>1</span>분 만에<br>확인해보세요</h2>
+            <h2>여러 은행의 조건을<br>1분 만에<br>확인해보세요</h2>
           </div>
           <span>한도는 높게,</span>
           <span>금리는 <span>낮게,</span></span>
@@ -295,9 +295,43 @@
               <img src="./img/section7-inner-img7.png" alt="" width="178">
             </div>
           </div>
+          <div class="sub-title">
+            <p>별도 앱 설치 없이 토스에서 바로,<br>
+            토스증권으로 나만의 투자를 시작해 보세요.</p>
+          </div>
         </div>
       </div>
     </section>
+    <!-- 일곱째 섹션 -->
+
+    <!-- 여덟째 섹션 -->
+    <section id="section8">
+      <div class="section8-outer">
+        <div class="section8-inner">
+          <h1>꼭 필요했던 금융</h1>
+        </div>
+      </div>
+    </section>
+    <!-- 여덟째 섹션 -->
+
+    <!-- 아홉째 섹션 -->
+    <section id="section9">
+      <div class="section9-outer">
+        <div class="section9-inner">
+          <h1>토스로<br>나에게 딱 맞게</h1>
+          <div class="img1">
+            <img src="./img/section9-img1.jpg" alt="">
+          </div>
+          <h2>내 문서함</h2><h3>공공문서 확인부터 납부까지 한 번에</h3>
+          <p>건강검진, 국가장학금 신청, 교통범칙금.과태료 납부.<br>
+          그동안 종이로 받았던 문서들 꼼꼼히 챙기느라 고생했어요.<br>
+          앞으로는 토스 내 문서함에서 간단히 받아보고 납부할 수 있어요.</p>
+        </div>
+      </div>
+    </section>
+    <!-- 아홉째 섹션 -->
+
+
   </div>
   
 </body>
