--- a/토스/index.html
+++ b/토스/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="wrap">
     
-    <!-- 네이게이션바 -->
+    <!-- 헤더 -->
     <div id="navbar">
       <div class="navbar-outer">
         <div class="navbar-inner">
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <!-- 네이게이션바 -->
+    <!-- 헤더 -->
 
     <!-- 첫번째 섹션 -->
     <section id="section1">
@@ -162,11 +162,11 @@
         <div class="section5-inner">
           <div class="main-title">
             <h1>대출</h1>
-            <h2>여러 은행의 조건을<br><span>1</span>분 만에<br>확인해보세요</h2>
+            <h2>여러 은행의 조건을<br>1분 만에<br>확인해보세요</h2>
           </div>
-          <span>한도는 높게,</span>
-          <span>금리는 <span>낮게,</span></span>
-          <span>부담은 <span>적게.</span></span>
+          <p>한도는 높게,</p>
+          <p>금리는 <span>낮게,</span></p>
+          <p>부담은 <span>적게.</span></p>
           <p>앉은 자리에서 여러 은행의 한도와 금리를 비교하고<br>
           내게 꼭 맞는 대출을 찾아보세요.<br>
           신용,비상금,대환,주택담보대출 모두 가능해요.</p>
@@ -274,30 +274,116 @@
           </div>
           <div class="popular-chart">
             <div class="chart chart1">
-              <img src="./img/section7-inner-img1.png" alt="" width="178">
+              <img src="./img/section7-inner-img1.png" alt="" width="150">
             </div>
             <div class="chart chart2">
-              <img src="./img/section7-inner-img2.png" alt="" width="178">
+              <img src="./img/section7-inner-img2.png" alt="" width="150">
             </div>
             <div class="chart chart3">
-              <img src="./img/section7-inner-img3.png" alt="" width="178">
+              <img src="./img/section7-inner-img3.png" alt="" width="150">
             </div>
             <div class="chart chart4">
-              <img src="./img/section7-inner-img4.png" alt="" width="178">
+              <img src="./img/section7-inner-img4.png" alt="" width="150">
             </div>
             <div class="chart chart5">
-              <img src="./img/section7-inner-img5.png" alt="" width="178">
+              <img src="./img/section7-inner-img5.png" alt="" width="150">
             </div>
             <div class="chart chart6">
-              <img src="./img/section7-inner-img6.png" alt="" width="178">
+              <img src="./img/section7-inner-img6.png" alt="" width="150">
             </div>
             <div class="chart chart7">
-              <img src="./img/section7-inner-img7.png" alt="" width="178">
+              <img src="./img/section7-inner-img7.png" alt="" width="150">
+            </div>
+          </div>
+          <div class="bottom-title">
+            <p>별도 앱 설치 없이 토스에서 바로,<br>토스증권으로 나만의 투자를 시작해 보세요.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 여덟째 섹션 -->
+    <section id="section8">
+      <div class="section8-outer">
+        <div class="section8-inner">
+          <div class="main-title">
+            <p>꼭 필요했던 금융</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 아홉째 섹션 -->
+    <section id="section9">
+      <div class="section9-outer">
+        <div class="section9-inner">
+          <div class="main-title">
+            <h1>토스로<br> 나에게 딱 맞게</h1>
+          </div>
+          <div class="item1">
+            <div class="img1">
+              <img src="./img/section9-img1.jpg" alt="">
+            </div>
+            <div class="titles">
+              <div class="title1">
+                <p>내 문서함 <span>공공문서 확인부터 납부까지 한 번에</span></p>
+              </div>
+              <div class="title2">
+                <p>건강검진,국가장학금 신청,교통범칙금.과태료 납부.<br>
+                그동안 종이로 받았던 문서들 꼼꼼히 챙기느라 고생했서요.<br>
+                앞으로는 토스 내 문서함에서 간단히 받아보고 납부할 수 있어요.</p>
+              </div>
+            </div>
+          </div>
+          <div class="item2">
+            <div class="item2-left">
+              <div class="itme2-img1">
+                <img src="./img/section9-img2.jpg" alt="">
+              </div>
+              <div class="titles">
+                <div class="title1">
+                  <p>보험</p>
+                </div>
+                <div class="title2">
+                  <p>조회부터 상담,<br>
+                  병원비 돌려받기를 간편하게</p>
+                </div>
+              </div>
+            </div>
+            <div class="item2-right">
+              <div class="imte2-img2">
+                <img src="./img/section9-img3.jpg" alt="">
+              </div>
+              <div class="title">
+                <p>또래보다 보험료는 적절하게 내고 있는지,<br>
+                낸 만큼 보장받고 있는지 확인해 보세요.<br>
+                전문가와의 상담을 통해 내게 딱 맞는 보험을<br>
+                추천 받고, 병원비를 간편하게 청구할 수<br>
+                있어요.</p>
+              </div>
+            </div>
+          </div>
+          <div class="item3">
+            <div class="img1">
+              <img src="./img/section9-img4.jpg" alt="">
+            </div>
+            <div class="titles">
+              <div class="title1">
+                <p>내 부동산 . 자동차<br>
+                <span>정기적으로 관리해보세요</span></p>
+              </div>
+              <div class="title2">
+                <p>집과 자동차의 공통점은 잘 사서, 잘 관리하고, 잘 팔아야 한다는 것.<br>
+                시세조회부터 아파트 관리비 납부, 자동차 보험료 조회까지 부동산과<br>
+                자동차 관리도 토스에서 시작해 보세요.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- 아홉째 섹션 -->
   </div>
   
 </body>
