--- a/토스/index.html
+++ b/토스/index.html
@@ -301,7 +301,8 @@
         </div>
       </div>
     </section>
-
+    <!-- 일곱째 섹션 -->
+    
     <!-- 여덟째 섹션 -->
     <section id="section8">
       <div class="section8-outer">
@@ -380,10 +381,7 @@
               </div>
             </div>
           </div>
-          <div class="sub-title">
-            <p>별도 앱 설치 없이 토스에서 바로,<br>
-            토스증권으로 나만의 투자를 시작해 보세요.</p>
-          </div>
+
         </div>
       </div>
     </section>
