--- a/토스/index.html
+++ b/토스/index.html
@@ -11,29 +11,27 @@
   <div id="wrap">
     
     <!-- 헤더 -->
-    <div id="navbar">
-      <div class="navbar-outer">
-        <div class="navbar-inner">
-          <div class="logo">
-            <a><img src="./img/rhptx6_fj87-v9hb3s_logo.png" alt="mainlogo" width="66px"></a>
+    <div id="header">
+      <div class="inner">
+        <div class="logo">
+          <a><img src="./img/rhptx6_fj87-v9hb3s_logo.png" alt="mainlogo" width="66px"></a>
+        </div>
+        <div class="header-items">
+          <div class="header-menu">
+            <ul>
+              <li><a href="#">회사 소개</a></li>
+              <li><a href="#">고객센터</a></li>
+              <li><a href="#">자주 묻는 질문</a></li>
+              <li><a href="#">토스인증서</a></li>
+              <li><a href="#">채용</a></li>
+            </ul>
           </div>
-          <div class="navbar-items">
-            <div class="navbar-menu">
-              <ul>
-                <li><a href="#">회사 소개</a></li>
-                <li><a href="#">고객센터</a></li>
-                <li><a href="#">자주 묻는 질문</a></li>
-                <li><a href="#">토스인증서</a></li>
-                <li><a href="#">채용</a></li>
-              </ul>
-            </div>
-            <div class="language-select">
-              <ul>
-                <li><a href="#">KOR</a></li>
-                <span>|</span>
-                <li><a href="#">ENG</a></li>
-              </ul>
-            </div>
+          <div class="language-select">
+            <ul>
+              <li><a href="#">KOR</a></li>
+              <span>|</span>
+              <li><a href="#">ENG</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -42,36 +40,34 @@
 
     <!-- 첫번째 섹션 -->
     <section id="section1">
-      <div class="section1-inner">
-        <div class="section1-box">
-          <h1>금융의 모든 것<br>토스에서 쉽고 간편하게</h1>
-          <div class="down-button">
-            <a href="#">
-              <div>
-                <img src="./img/applekorea.png" alt="애플스토어" width="24" >
-              </div>
-              <span>App Store</span>
-            </a>
-            <a href="#">
-              <div>
-                <img src="./img/googleplay.png" alt="구글플레이" width="24">
-              </div>
-              <span>Google Play</span>
-            </a>
-          </div>
-          <div class="scrolldown-button">
-            <a href="#">
-              <img src="./img/down-arrow-svgrepo-com.svg" alt="화살표" width="30">
-            </a>
-          </div>
+      <div class="inner">
+        <h1>금융의 모든 것<br>토스에서 쉽고 간편하게</h1>
+        <div class="down-button">
+          <a href="#">
+            <div>
+              <img src="./img/applekorea.png" alt="애플스토어" width="24" >
+            </div>
+            <span>App Store</span>
+          </a>
+          <a href="#">
+            <div>
+              <img src="./img/googleplay.png" alt="구글플레이" width="24">
+            </div>
+            <span>Google Play</span>
+          </a>
         </div>
+        <div class="scrolldown-button">
+          <a href="#">
+            <img src="./img/down-arrow-svgrepo-com.svg" alt="화살표" width="30">
+          </a>
+        </div>        
       </div>
     </section>
     <!-- 첫번째 섹션 -->
 
     <!-- 두번째 섹션 -->
     <section id="section2">
-      <div class="section2-inner">
+      <div class="inner">
         <h2>내 모든 금융 내역을 한눈에 조회하고 한 곳에서 관리하세요.<br>이제껏 경험 못 했던 쉽고 편리한
         금융 서비스,<br>토스와 함께라면 당신의 일상이 새로워질 거예요.</h2>
       </div>
@@ -503,6 +499,81 @@
     </section>
     <!-- 열한번째 섹션 -->
 
+    <!-- 푸터 -->
+    <footer id="footer">
+      <div class="inner">
+        <div class="site-group-list">
+          <div class="service-group list">
+            <p>서비스</p>
+            <a href="">공지사항</a>
+            <a href="">자주 묻는 질문</a>
+            <a href="">공동인증서 관리</a>
+            <a href="">계정 일시잠금</a>
+            <a href="">고객센터</a>
+            <a href="">브랜드 리소스센터</a>
+          </div>
+          <div class="company-group list">
+            <p>회사</p>
+            <a href="">회사 소개</a>
+            <a href="">토스페이먼츠</a>
+            <a href="">토스인슈어런스</a>
+            <a href="">토스증권</a>
+            <a href="">토스씨엑스</a>
+            <a href="">토스뱅크</a>
+            <a href="">토스플레이스</a>
+            <a href="">채용</a>
+            <a href="">블로그</a>
+            <a href="">공고</a>
+          </div>
+          <div class="Inquiry-group list">
+            <p>문의</p>
+            <a href="">사업 제휴</a>
+            <a href="">광고 문의</a>
+            <a href="">인증 사업 문의</a>
+            <a href="">마케팅.PR</a>
+            <a href="">IR</a>
+          </div>
+          <div class="customer-group list">
+            <p>고객센터</p>
+            <a href="">전화: 1599-4905 (24시간 연중무휴)</a>
+            <a href="">이메일(고객전용): support@toss.im</a>
+            <a href="">이메일(외부기관용): safe@toss.im</a>
+            <a href="">민원 접수</a>
+          </div>  
+        </div>
+        <div class="address">
+          <p>㈜비바리퍼블리카</p>
+          <a>사업자 등록번호 : 120-88-01280 | 대표 : 이승건</a><br>
+          <a>호스팅 서비스 : 주식회사 비바리퍼블리카 | 통신판매업 신고번호 : 2014-서울강남-03377 사업자정보확인</a><br>
+          <a>06236 서울특별시 강남구 테헤란로 142, 12층 (역삼동, 아크플레이스)</a><br>
+          <a>고객센터 : 서울특별시 강남구 테헤란로 133, 9층 (역삼동, 한국타이어빌딩)</a><br>
+        </div>
+        <div class="term">
+          <ul>
+            <li><a>서비스 이용약관</a></li>
+            <li><a>통합 금융정보 서비스 약관</a></li>
+            <li><a>마이데이터 서비스 이용약관</a></li>
+            <li><a>이용자의 권리 및 유의사항</a></li>
+            <li><strong>개인정보 처리방침</strong></li>
+            <li><strong>채용팀 개인정보 처리방침</strong></li>
+            <li><a>영상정보처리기기 운영 관리 방침</a></li>
+            <li><a>위치기반서비스 이용약관</a></li>
+            <li><a>가맹점 고지사항</a></li>
+            <li><a>토스 전자서명인증업무준칙</a></li>
+            <li><a>토스 전자인증서비스 약관</a></li>
+            <li><a>금융소비자보호</a></li>
+          </ul>
+        </div>
+        <div class="social-list">
+          <a href=""><img src="./img/footer-img1.svg" alt=""></a>
+          <a href=""><img src="./img/footer-img2.svg" alt=""></a>
+          <a href=""><img src="./img/footer-img3.svg" alt=""></a>
+          <a href=""><img src="./img/footer-img4.svg" alt=""></a>
+          <a href=""><img src="./img/footer-img5.svg" alt=""></a>
+        </div>
+      </div>
+    </footer>
+    <!-- 푸터 -->
   </div>
   
 </body>
