--- a/토스/index.html
+++ b/토스/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>토스</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/response.css">
   <script
   src="https://code.jquery.com/jquery-3.6.1.min.js"
   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
   crossorigin="anonymous"></script>
+  <script src="./js/jquery.js"></script>
 </head>
+
 <body>
-  <div id="wrap">    
+  <div id="wraper">    
     <!-- 헤더 -->
     <div id="header">
       <div class="inner">
@@ -48,6 +51,7 @@
       <div class="inner">
         <div class="container">
           <h1>금융의 모든 것<br>토스에서 쉽고 간편하게</h1>
+          
           <div class="down-button">
             <a href="#">
               <div>
@@ -585,6 +589,6 @@
     </footer>
     <!-- 푸터 -->
   </div>
-  
+  <script src="https://kit.fontawesome.com/6e61b79e99.js" crossorigin="anonymous"></script>
 </body>
 </html>
