--- a/토스/index.html
+++ b/토스/index.html
@@ -51,15 +51,14 @@
       <div class="inner">
         <div class="container">
           <h1>금융의 모든 것<br>토스에서 쉽고 간편하게</h1>
-          
           <div class="down-button">
-            <a href="#">
+            <a href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328" target="_blank">
               <div>
                 <img src="./img/applekorea.png" alt="애플스토어">
               </div>
               <p>App Store</p>
             </a>
-            <a href="#">
+            <a href="https://play.google.com/store/apps/details?id=viva.republica.toss" target="_blank">
               <div>
                 <img src="./img/googleplay.png" alt="구글플레이">
               </div>
@@ -68,7 +67,7 @@
           </div>
           <div class="scrolldown-button">
             <a href="#">
-              <img src="./img/down-arrow-svgrepo-com.svg" alt="화살표" width="30">
+              <svg xmlns="http://www.w3.org/2000/svg" height="40" width="40"><path d="M20.042 25.5q-.334 0-.646-.125-.313-.125-.604-.458l-8.125-8.125q-.5-.5-.5-1.25t.5-1.25q.5-.5 1.208-.5t1.25.5l6.917 6.916 6.916-6.916q.5-.5 1.23-.5.729 0 1.229.5.5.5.5 1.25t-.5 1.208l-8.167 8.167q-.25.291-.562.437-.313.146-.646.146Z"/></svg>
             </a>
           </div>  
         </div>      
@@ -89,17 +88,11 @@
     <section id="section3">
       <div class="inner">
         <div class="container">
-          <div class="main-title">
+          <div class="main-title aniOn">
             <h2>홈 · 소비</h2>
             <h3>내 돈 관리,<br>지출부터 일정까지<br>똑똑하게</h3>
           </div>
-          <div class="sub-title">
-            <p>토스에 계좌와 카드를 연결해 보세요.<br>
-            계좌 잔액, 대출.투자 내역은 기본,<br>
-            일자별 소비와 수입까지 한 번엔 볼 수 있어요.
-            </p>
-          </div>
-          <div class="item1">
+          <div class="item1 aniOn">
             <div class="home">
               <img src="./img/section1_1_home_01.png" alt="">
             </div>
@@ -107,14 +100,19 @@
               <img src="./img/iPhone12_Clay_Shadow.png" alt="">
             </div>
           </div>
-
-          <div class="item2">
+          <div class="item2 aniOn">
             <div class="home">
               <img src="./img/section1_1_home_02.png" alt="">
             </div>
             <div class="iphone12">
               <img src="./img/iPhone12_Clay_Shadow.png" alt="">
             </div>
+          </div>
+          <div class="sub-title aniOn">
+            <p>토스에 계좌와 카드를 연결해 보세요.<br>
+            계좌 잔액, 대출.투자 내역은 기본,<br>
+            일자별 소비와 수입까지 한 번엔 볼 수 있어요.
+            </p>
           </div>
         </div>
       </div>
