--- a/토스/index.html
+++ b/토스/index.html
@@ -88,11 +88,11 @@
     <section id="section3">
       <div class="inner">
         <div class="container">
-          <div class="main-title aniOn">
+          <div class="main-title">
             <h2>홈 · 소비</h2>
             <h3>내 돈 관리,<br>지출부터 일정까지<br>똑똑하게</h3>
           </div>
-          <div class="item1 aniOn">
+          <div class="item1">
             <div class="home">
               <img src="./img/section1_1_home_01.png" alt="">
             </div>
@@ -100,7 +100,7 @@
               <img src="./img/iPhone12_Clay_Shadow.png" alt="">
             </div>
           </div>
-          <div class="item2 aniOn">
+          <div class="item2">
             <div class="home">
               <img src="./img/section1_1_home_02.png" alt="">
             </div>
@@ -108,7 +108,7 @@
               <img src="./img/iPhone12_Clay_Shadow.png" alt="">
             </div>
           </div>
-          <div class="sub-title aniOn">
+          <div class="sub-title">
             <p>토스에 계좌와 카드를 연결해 보세요.<br>
             계좌 잔액, 대출.투자 내역은 기본,<br>
             일자별 소비와 수입까지 한 번엔 볼 수 있어요.
@@ -170,22 +170,16 @@
           </div>
           <div class="sub-title">
             <h4>한도는 높게,</h4>
-            <h4>금리는 <span>낮게,</span><h4>
-            <h4>부담은 <span>적게.</span><h4>
+            <h4>금리는 <span>낮게,</span></h4>
+            <h4>부담은 <span>적게.</span></h4>
             <p>앉은 자리에서 여러 은행의 한도와 금리를 비교하고<br>
             내게 꼭 맞는 대출을 찾아보세요.<br>
             신용,비상금,대환,주택담보대출 모두 가능해요.</p>
           </div>
           <div class="item1">
-            <div class="home home1">
-              <img src="./img/section5-img3.png" alt="">
+            <div class="home">
+              <img src="./img/section5-img1.png" alt="">
             </div>
-            <!-- <div class="home home2">
-              <img src="./img/section5-img2.png" alt="" width="315">
-            </div>
-            <div class="home home3">
-              <img src="./img/section5-img1.png" alt="" width="315">
-            </div> -->
             <div class="iphone12">
               <img src="./img/iPhone12_Clay_Shadow.png" alt="">
             </div>
@@ -279,25 +273,25 @@
             </div>
           </div>
           <div class="popular-chart">
-            <div class="chart chart1">
+            <div class="chart chart1 chart-opacity3">
               <img src="./img/section7-inner-img1.png" alt="">
             </div>
-            <div class="chart chart2">
+            <div class="chart chart2 chart-opacity2">
               <img src="./img/section7-inner-img2.png" alt="">
             </div>
-            <div class="chart chart3">
+            <div class="chart chart3 chart-opacity1">
               <img src="./img/section7-inner-img3.png" alt="">
             </div>
             <div class="chart chart4">
               <img src="./img/section7-inner-img4.png" alt="">
             </div>
-            <div class="chart chart5">
+            <div class="chart chart5 chart-opacity1">
               <img src="./img/section7-inner-img5.png" alt="">
             </div>
-            <div class="chart chart6">
+            <div class="chart chart6 chart-opacity2">
               <img src="./img/section7-inner-img6.png" alt="">
             </div>
-            <div class="chart chart7">
+            <div class="chart chart7 chart-opacity3">
               <img src="./img/section7-inner-img7.png" alt="">
             </div>
           </div>
