--- a/토스/index.html
+++ b/토스/index.html
@@ -307,7 +307,9 @@
     <section id="section8">      
       <div class="main-title">
         <p>꼭 필요했던 금융</p>
-      </div>      
+      </div>
+      <div class="items item1"></div>
+      <div class="items item2"></div>      
     </section>
     <!-- 여덟째 섹션 -->
 
