--- a/토스/index.html
+++ b/토스/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <div class="container">
           <div class="logo">
-            <a><img src="./img/rhptx6_fj87-v9hb3s_logo.png" alt="mainlogo" width="66px"></a>
+            <a href="./index.html"><img src="./img/rhptx6_fj87-v9hb3s_logo.png" alt="mainlogo" width="66px"></a>
           </div>
           <div class="header-items">
             <div class="header-menu">
