--- a/토스/index.html
+++ b/토스/index.html
@@ -50,7 +50,7 @@
     <section id="section1">
       <div class="inner">
         <div class="container">
-          <h1>금융의 모든 것<br>토스에서 쉽고 간편하게</h1>
+          <h1>금융의 모든 것<br>토스에서 쉽고 간편하겡</h1>
           <div class="down-button">
             <a href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328" target="_blank">
               <div>
@@ -535,7 +535,7 @@
             </div>
             <div class="company-group list">
               <p>회사</p>
-              <a href="">회사 소개</a>
+              <a href="">회사 소갱</a>
               <a href="">토스페이먼츠</a>
               <a href="">토스인슈어런스</a>
               <a href="">토스증권</a>
