--- a/토스/index.html
+++ b/토스/index.html
@@ -79,7 +79,7 @@
     <section id="section2">
       <div class="inner">
         <h2>내 모든 금융 내역을 한눈에 조회하고 한 곳에서 관리하세요.<br>이제껏 경험 못 했던 쉽고 편리한
-        금융 서비스,<br>토스와 함께라면 당신의 일상이 새로워질 거예요.</h2>
+        금융 서비스,<br>토스와 함께라면 당신의 일상이 새로워질 거예요.123</h2>
       </div>
     </section>
     <!-- 두번째 섹션 -->
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="main-title">
             <h2>홈 · 소비</h2>
-            <h3>내 돈 관리,<br>지출부터 일정까지<br>똑똑하게</h3>
+            <h3>내 돈 관리,<br>지출부터 일정까지<br>똑똑하게123</h3>
           </div>
           <div class="item1">
             <div class="home">
