--- a/토스/index.html
+++ b/토스/index.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="main-title">
             <h2>홈 · 소비</h2>
-            <h3>내 돈 관리,<br>지출부터 일정까지<br>똑똑하게123</h3>
+            <h3>내 돈 관리123,<br>지출부터 일정까지<br>똑똑하게123</h3>
           </div>
           <div class="item1">
             <div class="home">
