--- a/토스/index.html
+++ b/토스/index.html
@@ -78,7 +78,7 @@
     <!-- 두번째 섹션 -->
     <section id="section2">
       <div class="inner">
-        <h2>내 모든 금융 내역을 한눈에 조회하고 한 곳에서 관리하세요.<br>이제껏 경험 못 했던 쉽고 편리한
+        <h2>내 모든 금융 내역을 한눈에 조회하고 한 곳에서 관리하세요.<br>이제껏 경험 못 했던 쉽고 편리한123
         금융 서비스,<br>토스와 함께라면 당신의 일상이 새로워질 거예요.123</h2>
       </div>
     </section>
@@ -89,7 +89,7 @@
       <div class="inner">
         <div class="container">
           <div class="main-title">
-            <h2>홈 · 소비</h2>
+            <h2>홈 · 소비123</h2>
             <h3>내 돈 관리123,<br>지출부터 일정까지<br>똑똑하게123</h3>
           </div>
           <div class="item1">
